devscripts (2.10.50) UNRELEASED; urgency=low

  * debchange: Add karmic (koala) to the list of recognised Ubuntu
    distributions.
  * debuild: Use printf when parsing the DEBUILD_LINTIAN_OPTS configuration
    file variable, to avoid eating -E.  (Closes: #527027)
  * rc-alert: Use standard single quotes in the debtags section of the manpage
    to avoid odd formatting and warnings from man

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 02 May 2009 20:47:39 +0100

devscripts (2.10.49) unstable; urgency=low

  * debchange:
    + Use == for numeric comparison, not eq.
    + Mention in the help output and manpage that a dummy changelog entry
      may be supplied in conjunction with --release in order to avoid
      spawning an editor.
    + Add a configuration variable and command line option to allow the
      recent change to --release's "auto-save" behaviour to be disabled.
      For consistency with other debchange options, the default is to
      retain the behaviour introduced in 2.10.48 - i.e. that the changelog
      must be explicitly saved after the use of --release. (Closes: #524393)
  * debcommit: If the installed version of dpkg-dev supports retrieving a
    list of appropriate bugs, automatically generate bzr --fixes arguments
    for Launchpad bugs as well as Debian bugs.  Thanks, Colin Watson.
    (Closes: #525823)
  * debsign: Make the PGP signing method work again.  Thanks, Florian Weimer.
    (Closes: #518821)
  * getbuildlog: Add a missing "use lib" to allow the special "last" and
    "last-all" versions to work correctly.  Thanks, Iustin Pop.
    (Closes: #523982)
  * licensecheck: Add detection of the AGPL.  Thanks, Didier Raboud.
    (Closes: #520903)
  * namecheck: Fix the formatting of a number of POD strings, also making
    them easier to translate.  Thanks, Florentin Duneau.  (Closes: #526047)
  * rc-alert:
    + Allow the generated list of bugs to be restricted to those affecting